<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/tools">


    <!-- feature Description String-->

    <string name="emergency_call">This is Emergency Call</string>
    <string name="emergency_text">This is Emergency Text</string>
    <string name="map_direction">This is Map Direction</string>
    <string name="location_notifier">This is Location Notifier</string>
    <string name="sms_tracking">This is Sms Tracking</string>
    <string name="fnf_tracking">This is FnF Tracking</string>
    <string name="phone_book">This is Phone Book</string>
    <string name="position_tracker">This is Position Tracker</string>
    <string name="news_feed">This is News Feed</string>

    <!-- feature Description String-->




    <string name="hello">Choose one of the features below.</string>

    <string name="about_saveMe">SaveMe is a communication, monitoring and security support software that allows you to know in details what is happening on an Android mobile device. It’s your mindless helper when will feel any kind of guilty for emergency support. This application is simple to use, includes a whole range of features. \n\nAdd a payment option to complete your account. You will not be charged unless you make a purchase.</string>



    <!--snapshot-->
    <string name="snapshot_holder_description">Area for the map snapshot.</string>
    <string name="wait_for_map_load">Wait for Map Load</string>
    <string name="snapshot_take_button">Take snapshot</string>
    <string name="snapshot_clear_button">Clear</string>
    <!--snapshot-->

    <string name="welcome">Welcome to SaveMe</string>

    <string name="app_name">SaveMe</string>
    <string name="description_logo">Demo</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Emergency Call</string>
    <string name="title_feature2">Phone Book</string>
    <string name="title_feature3">Emergency Text</string>
    <string name="title_feature4">Maps Directions</string>
    <string name="title_feature5">News Feed</string>
    <string name="title_feature6">Position Tracker</string>
    <string name="title_feature7">SMS Tracking</string>
    <string name="title_feature8">FnF Tracking</string>
    <string name="title_feature9">Location Notifier</string>
    <string name="title_feature10">Family Payment</string>



    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>

    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <!--filtering-->
    <string name="myAlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!--filtering-->
    <string-array name="sensibility">

        <item>Very High</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>Very Low</item>

    </string-array>
    <!--time setting for locations-->
    <string-array name="time">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string-array name="fnftime">
        <item>One sms/day</item>
        <item>Two sms/day</item>
        <item>Three sms/day</item>
        <item>Four sms/day</item>
        <item>Five sms/day</item>
    </string-array>

    <string-array name="map_customization">
        <item>Select</item>
        <item>Hospital</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Shopping Mall</item>
        <item>School</item>
        <item>Restaurant</item>
        <item>ATM Booth</item>
        <item>Mosque</item>
        <item>Police Station</item>
        <item>University</item>

    </string-array>

    <string-array name="distance_selection">
        <item>Very Near</item>
        <item>Near</item>
        <item>Average</item>
        <item>Far</item>
        <item>So Far</item>
    </string-array>


    <string name="title_activity_home_activity_save_me">HomeActivitySaveMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_save_me_home">SaveMeHomeActivity</string>

    <!--about of the feature-->
    <string name="animated_rainbow_span1">Emergency Call: </string>
    <string name="animated_rainbow_span2">Emergency Text: </string>
    <string name="animated_rainbow_span3">Phone Book: </string>
    <string name="animated_rainbow_span4">News Feed: </string>
    <string name="animated_rainbow_span5">SMS Tracking: </string>
    <string name="animated_rainbow_span6">FnF Tracking: </string>
    <string name="animated_rainbow_span7">Position Tracker: </string>
    <string name="animated_rainbow_span8">Maps Direction: </string>
    <string name="animated_rainbow_span9">Location Notifier: </string>
    <string name="animated_rainbow_span_desc">With ObjectAnimator</string>
  <string name="animated_rainbow_span_text1">Emergency Call: Any unwanted situation SaveMe user can make automated call to his predefine contact by shaking his mobile phone. The contact number must be verified by SMS confirmation. SaveMe user can set shaking sensibility very high, high, medium, low or very low.
  </string>
    <string name="animated_rainbow_span_text2">Emergency Text: SaveMe user can send automated SMS with present position’s Google map URL to his predefine contact by shaking his mobile phone for any emergency. SaveMe user can set shaking sensibility very high, high, medium, low or very low. This case predefined 3 verified person will notify his position by SMS.</string>
    <string name="animated_rainbow_span_text3">Phone Book: If you are one of those who think the phone book on your Android is not at your best, this is the app for you. SaveMe is a simple yet efficient phone book that allows you to find and get in contact with the person you want in an instant. Just swipe, tap, and you are done!</string>
    <string name="animated_rainbow_span_text4">News Feed: Time to time Rich Site Summary feed will be updating top on the application. Right now bdnews24.com, banglanews24.com, bbc.bangla.com, espncricinfo.com are available on news feed.</string>


     <string name="animated_rainbow_span_text5">SMS Tracking: SaveMe user can inform his position by SMS. If any verified user triggering SMS will get SaveMe user present position with google URL. Maximum 10 FNF can add same time.
  </string>
    <string name="animated_rainbow_span_text6">FnF Tracking: SaveMe Apps user can track his or her position in google Map. The contact number must be verified by SMS confirmation.</string>
    <string name="animated_rainbow_span_text7">Position Tracker: SaveMe user can keep his moving history selected time interval. It’s may be 15, 30, 40 or 60 minutes gap. Necessary time user can view his provision position on selective time.</string>
    <string name="animated_rainbow_span_text8">Maps Direction: If SaveMe user set present position and destination, Saveme will appear map direction.</string>
    <string name="animated_rainbow_span_text9">Location Notifier: If SaveMe user set specific location of any FNF’s, he’ll be notified and a SMS will be sent to his FNF after reaching his specific destination .</string>
    <string name="title_activity_phone_book">PhoneBookActivity</string>
    <string name="title_activity_map_view">Map View</string>
    <string name="title_activity_news_feed_view">News Feed</string>

    <!--about of the feature-->

</resources>
