<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:id="@+id/aboutLayout"
    android:layout_height="wrap_content">

    <LinearLayout style="@style/TitleBar"
        android:background="#05bcc6"
        android:layout_height="?attr/actionBarSize"
        >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:visibility="gone"
            android:onClick="onClickAbout" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:visibility="gone"
            android:onClick="onClickSearch" />
    </LinearLayout>

    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="#faf9fa"
            tools:context="com.example.nanosoft_android.myapplication.MainActivity">
            <TextView

                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/emgcall"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/animated_rainbow_span_text1"
                android:textSize="14dp"
                tools:context=".AnimatedRainbowSpanActivity"/>

            <TextView

                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/text2"
                android:drawableLeft="@drawable/emgtextsquare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/animated_rainbow_span_text2"
                android:textSize="14dp"
                tools:context=".AnimatedRainbowSpanActivity"/>

            <TextView

                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/text3"
                android:drawableLeft="@drawable/phonebooksq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/animated_rainbow_span_text3"
                android:textSize="14dp"
                tools:context=".AnimatedRainbowSpanActivity"/>

            <TextView

                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/text4"
                android:drawableLeft="@drawable/rssq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/animated_rainbow_span_text4"
                android:textSize="14dp"
                tools:context=".AnimatedRainbowSpanActivity"/>

            <TextView

                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/smstracksw"
                android:drawablePadding="15dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/animated_rainbow_span_text5"
                android:textSize="14dp"
                tools:context=".AnimatedRainbowSpanActivity"/>

            <TextView

                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/text6"
                android:drawableLeft="@drawable/fnftracksq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/animated_rainbow_span_text6"
                android:textSize="14dp"
                tools:context=".AnimatedRainbowSpanActivity"/>

            <TextView

                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/text7"
                android:drawableLeft="@drawable/positiontrcksq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/animated_rainbow_span_text7"
                android:textSize="14dp"
                tools:context=".AnimatedRainbowSpanActivity"/>

            <TextView

                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/text8"
                android:drawableLeft="@drawable/mapdirsq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/animated_rainbow_span_text8"
                android:textSize="14dp"
                tools:context=".AnimatedRainbowSpanActivity"/>

            <TextView

                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/text9"
                android:drawableLeft="@drawable/fnflocsq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/animated_rainbow_span_text9"
                android:textSize="14dp"
                tools:context=".AnimatedRainbowSpanActivity"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
