<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:id="@+id/appPurchaseLayout"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.nanosoft.bd.saveme.activity.AppPurchaseActivity">

    <LinearLayout
        style="@style/TitleBar"
        android:layout_height="?attr/actionBarSize"
        android:background="#05bcc6">

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText"

            />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/validationTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"

            android:textStyle="bold"

            />


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#636381"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

           >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:visibility="gone"
                >

                <WebView
                    android:id="@+id/validationWv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >


                </WebView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    style="@style/Base.TextAppearance.AppCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/familypaymentyw" />

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="Set up a Family Payment Method"
                    android:textColor="#813114"
                    android:textSize="23dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="You got an sms whenever a family member buy something using this payment method"
                    android:textScaleX="1"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"

                android:layout_marginTop="100dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/paymentgetway"
                    android:onClick="onClickFamilyPayment" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>